[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
redis = { version = "0.21.3", features = ["tokio-comp", "tokio-native-tls-comp"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
