[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.0.21"
poem-openapi = "1.0.20"
slab = "0.4.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

tokio = { version = "1.13.0", features = ["full"] }
redis = { version = "0.21.3", features = ["tokio-comp", "tokio-native-tls-comp"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.2"